fixed check for noDogs/singleDog from getPetsAtShelter and fixed profile-content height on mobile

--- a/css/theme.css
+++ b/css/theme.css
@@ -209,6 +209,10 @@ a {
 
 
 @media only screen and (max-width: 480px) {
+    .profile-content {
+        height: auto;
+    }
+    
     .searches {
         width: 65%;
         margin: 0 auto;
